--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,33 @@
-body{
-  background: beige;
+img {
+    /* viewport 기준으로 위치가 결정된다. */
+    position: fixed;
+      bottom: 0px;
+    right: 0px;
+  z-index:-3;
+  width:100%;
+  height:100%;
+
 }
 h1,h2, span{
   font-family:-apple-system;
+  z-index:2;
+  color:whitesmoke;
 }
 
-img{
-  position:
-  height: 100vh;
-  width: 100vw;
-}
+
 
 .hidden{
   display: none;
+}
+
+.entire{
+  background:rgba(0,0,0,0.5);
+  position:absolute;
+  left:50%; 
+  top:50%;
+  transform:translate(-50%, -50%);
+  border-radius:100px;
+  padding:70px;
+  overflow: scroll
+
 }
