--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import "variables.css";
+@import "reset.css";
 
 
 img {
@@ -44,7 +45,7 @@ h1,h2, span{
 
 #date{
   font-size: 400%;
-  margin: 0
+  margin-bottom: 10px;
 }
 #clock{
   font-size: 300%;
@@ -53,79 +54,112 @@ h1,h2, span{
 
 
 
+
+
+#hello-box{
+  position:absolute;
+  left:50%; 
+  top:50%;
+  transform:translate(-50%, -50%);
+  width:90%;
+  height:auto;
+}
+
+#hello-box2{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#hello{
+
+  font-size:50px;
+  margin-bottom:20px;
+  font-weight:650;
+}
 #login-form input{
   border: none;
 }
 
-#hello{
-  height:10%;
-  width:100%;
-  font-size:50px;
-  position:absolute;
-  left:50%; 
-  top:45%;
-  transform:translate(-50%, -55%);
-  text
+#login-form input:not([type="submit"]){
+  border-bottom: 4px solid rgba(255, 255, 255, 0.6);
+  transition: border-color 0.3s ease-in-out;
+  font-size: 40px;
+  font-color: white;  
+  width:80%;
+  height:40px;
+  background-color: rgba(0, 0, 0, 0);
+  
+}
+#login-form input:focus {
+  border-color: rgba(255, 255, 255, 1);
 }
 
-#login-form input:not([type="submit"]){
-  border-bottom: 2px solid rgba(255, 255, 255, 0.8);
-  transition: border-color 0.3s ease-in-out;
-  font-size: 18px;
-  width:75%;
-  height:5%;
-  background-color: rgba(0, 0, 0, 0);
+
+#greeting-box{
   position:absolute;
   left:50%; 
   top:55%;
   transform:translate(-50%, -45%);
+  width:90%;
+  height:70%;
 }
-#login-form input::placeholder {
-  color: rgba(255, 255, 255, 0.88);
-}
-#login-form input[type="submit"] {
-  background-color: rgba(0, 0, 0, 0.2)
-  cursor: pointer;
-  padding: 2px 0px;
-  border-radius: 5px;
-  
-  font-size: 12px;
-  width:10%;
-  height:5%;
-  position:absolute;
-  left:50%; 
-  top:50%;
-  transform:translate(-50%, -50%);
+#greeting-box2{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height:100%;
 }
 
 #greeting{
-
-  background-color: rgba(0, 0, 0, 0.2);
   position:absolute;
-  left:50%; 
-  top:35%;
-  transform:translate(-50%, -65%);
-  border-radius:5px;
+  top:5%;  
+  transformY:-95%;
+  font-size:50px;
+  font-weight:650;
+  margin:0;
 }
 
 #todo-form{
   position:absolute;
-  left:50%; 
-  top:50%;
-  transform:translate(-50%, -50%);
+  top:16%; 
+
 }
-#todo-form input:not([type="submit"]){
-  border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+#todo-form input{
+  border:none;
+}
+
+#todo-form input{
+  border-bottom: 4px solid rgba(255, 255, 255, 0.6);
   transition: border-color 0.3s ease-in-out;
-  font-size: 18px;
-  width:60%;
-  height:5%;
-  background-color: rgba(0, 0, 0, 0.2);
+  font-size: 40px;
+  font-color: white;  
+  width:100%;
+  height:40px;
+  background-color: rgba(0, 0, 0, 0);
+  font-weight:600;
+}
+
+
+#todo-form input:focus {
+  border-color: rgba(255, 255, 255, 1);
 }
 
 #todo-form input::placeholder {
   color: rgba(255, 255, 255, 0.88);
+}
+
+#todo-box{
+
+  background-color: rgba(0,0,0,0.3);
+  width:80%;
+  height:63%;
+  overflow: auto;
+  position:absolute;
+  top:35%; 
+  transformY:-65%;
+  border-radius: 10px;
 }
 
 
@@ -138,16 +172,7 @@ h1,h2, span{
   width:80%;
 }
 
-#todo-box{
-  position:absolute;
-  left:50%; 
-  top:65%;
-  transform:translate(-50%, -35%);
-  background-color: rgba(0,0,0,0.4);
-  height: 30%;
-  width:80%;
-  overflow: auto;
-}
+
 
 
 
@@ -159,13 +184,20 @@ h1,h2, span{
 
 button{
   margin-left:5px;
-  
+  margin-right:5px;
   height:20px;
   width: 20px;
   border-radius:10px;
   font-size: 7px;
-  background-color: rgb(255,255,255,0.9);
+  font-weight:700;
+  background-color: rgb(255,255,255,1);
   text-align: center;
   padding: 4.5px 4.5px;
   border: none;
+}
+
+li{
+  font-size: 30px;
+  font-color: white;  
+  font-weight:500;
 }
