--- a/css/reset.css
+++ b/css/reset.css
@@ -127,12 +127,9 @@ a {
 }
 
 input, select, textarea{
-    color: white;
+    color: black;
 }
 
-textarea:focus, input:focus {
-    color: white;
-}
 
 ::-webkit-scrollbar {
   display: none;
