--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,17 @@
 @import "reset.css";
 
 
-img {
-    /* viewport 기준으로 위치가 결정된다. */
+/* img {
+
     position: fixed;
       bottom: 0px;
     right: 0px;
   z-index:-3;
   width:200%;
   height:200%;
+}  */
 
-}
-h1,h2, span{
+/* h1,h2, span{
   font-family:-apple-system;
   z-index:2;
   color:#ffffff;
@@ -200,4 +200,4 @@ li{
   font-size: 30px;
   font-color: white;  
   font-weight:500;
-}
+} */
